# taskbuddy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
.custom-hooks/: check-branch-name.sh
assets/: ascii_art.txt
circleci/: config.yml
requirements/: base.txt  dev.txt
sql/: 001_init.sql  002_create_task_table.sql  003_add_task_index.sql
taskbuddy/: __main__.py  constants.py  database.py  decorators.py  migrations.py  tasks_manager.py  types.py  utils.py
taskbuddy/entities/: __init__.py  task.py
tests/: test_setup.py  test_task_manager.py
